# drl-asset-allocation

./: .gitignore  README.md  a2c_experiments.py  plot_best_models.ipynb  ppo_experiments.py  ppo_train.py  pyproject.toml
configs/: a2c_config.json  ppo_config.json
configs/ppo/: basic_config.json
data/: yahoo_finance.csv  yahoo_finance_test.csv  yahoo_finance_train.csv  yahoo_finance_val.csv
example_models/a2c/bottom/hyperparam_238/: hyper_params.json
example_models/a2c/bottom/hyperparam_258/: hyper_params.json
example_models/a2c/bottom/hyperparam_270/: hyper_params.json
example_models/a2c/top/hyperparam_105/: hyper_params.json
example_models/a2c/top/hyperparam_199/: hyper_params.json
example_models/a2c/top/hyperparam_239/: hyper_params.json
example_models/ppo/bottom/hyperparam_193/: hyper_params.json
example_models/ppo/bottom/hyperparam_233/: hyper_params.json
example_models/ppo/bottom/hyperparam_253/: hyper_params.json
example_models/ppo/top/hyperparam_11/: hyper_params.json
example_models/ppo/top/hyperparam_257/: hyper_params.json
example_models/ppo/top/hyperparam_269/: hyper_params.json
experiment_configs/: a2c_config.json  ppo_config.json
notebooks/: ablation_studies.ipynb  plot_best_models.ipynb
src/: environment.py
src/data/: data_loader.py
src/env/: environment.py
src/models/: a2c.py  a2c_old.py  ppo.py
src/models/a2c/: a2c.py
src/models/ppo/: ppo.py
src/utils/: common_utils.py  data_loader.py
tests/: conftest.py  test_environment.py  test_evaluation.py  test_model.py  test_utils.py
(+180 files in other folders)
