[tool.poetry]
name = "final-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
pandas = "^2.1.3"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pylint = "^3.0.2"
mypy = "^1.7.0"
codecov = "^2.1.13"
gymnasium = "^0.29.1"
torch = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
