[tool.poetry]
name = "final-project"
version = "0.1.0"
description = "final project for reinforcement learning Fall 2023"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
pandas = "^2.1.3"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pylint = "^3.0.2"
mypy = "^1.7.0"
codecov = "^2.1.13"
gymnasium = {extras = ["mujoco"], version = "^0.29.1"}
torch = "^2.1.1"
wandb = "^0.16.0"
pandas-datareader = "^0.10.0"
stable-baselines3 = "^2.2.1"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
